<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_time_interval"
        android:title="@string/time_interval"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_update_white_24dp"/>

    <item
        android:id="@+id/menu_item_sources"
        android:title="@string/sources"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_white_24dp"/>

</menu>