<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_add_alarm"
            android:title="@string/add_alarm"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_add_alarm_white_24dp"/>

</menu>