<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:gravity="center"
              android:layout_height="match_parent"
              android:layout_width="match_parent">

    <ImageView
        android:id="@+id/iv_splash"
        android:layout_height="128dp"
        android:layout_width="128dp"
        android:src="@drawable/ic_orco_512"/>


</LinearLayout>
